# liars_dice

./: BakCMakeLists.txt  CMakeLists.txt  Doxyfile  atend.hpp  bid.cpp  bid.hpp  bluff.cpp  bluff_opt.cpp  brotli.cpp  brotli.hpp  db.json  dice.cpp  dice.hpp  engine.cpp  engine.hpp  expires.cpp  expires.hpp  filehelpers.cpp  filehelpers.hpp  final.json  game-invalid.json  game-with-extra-player.json  game-with-no-players.json  game.cpp  game.hpp  helpers.cpp  helpers.hpp  httphelpers.hpp  json.hpp  player-in-two-games.json  player.cpp  player.hpp  ssi.cpp  ssi.hpp  test-game.json  test_bluff.cpp  tokenizer.hpp
static/: .eslintrc.js  dice.js  game.html  gameon.html  index.html  index2.html  login.html  question.html  setup-create.html
static/html/: login.html
static/js/: dice.js
test/: mockdice.hpp  one_include.txt  test_bid.cpp  test_brotli.cpp  test_dice.cpp  test_game.cpp  test_helpers.hpp  test_httphelpers.cpp  test_player.cpp  test_ssi.cpp  test_tokenizer.cpp  two_includes.txt
web-materia/: convert.sh
